--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "abdelrahman/db-wrapper",
+    "name": "abdelrahman1/db-wrapper",
     "description": "db wrapper",
     "type": "library",
     "license": "MIT",
